--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,3 @@
 <!-- start custom footer snippets -->
-<b>Ignis!</b>
+<b>Ignis! A journey of a thousand miles begins with a single step.</b>
 <!-- end custom footer snippets -->
